--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,9 @@
 //Colour
+$black: #000000;
 $off-black: #20222b;
 $dark-blue: #333745;
+$light-blue: #464b5e;
+$white: #ffffff;
 $off-white: #a5afd7;
 $plum: #dda0dd;
 //spacing
@@ -8,3 +11,4 @@ $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+$desktop-breakpoint: 45rem;
